<resources>
    <string name="app_name">暖途</string>
    <string name="copyright">www.szsftx.com</string>
    <string name="network_error">网络错误</string>
    <string name="default_unified_loading_text">请稍候&#8230;</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_close">关闭</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载…</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">上拉查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="titlebar_button_tip_next">下一步</string>
    <string name="titlebar_button_tip_over">完成</string>
    <string name="titlebar_button_tip_skip">跳过</string>
    <string name="titlebar_button_tip_delete">删除</string>
    <string name="titlebar_button_tip_add">添加</string>
    <string name="titlebar_button_tip_commit">提交</string>
    <string name="sliding_menu_message">通知</string>
    <string name="sliding_menu_shake">摇一摇求救</string>
    <string name="sliding_menu_setting">设置</string>
    <string name="sliding_menu_exit">退出登录</string>
    <string name="sliding_menu_guest">游客</string>
    <string name="activity_guide_btn_login">登录</string>
    <string name="activity_guide_btn_register">注册</string>
    <string name="activity_guide_btn_guest">游客</string>
    <string name="activity_login_ttb_title">登录</string>
    <string name="activity_login_ttb_righttext">快速注册</string>
    <string name="activity_login_edt_phone">输入注册手机号</string>
    <string name="activity_login_phone">账号</string>
    <string name="activity_login_edt_password">输入密码</string>
    <string name="activity_login_password">密码</string>
    <string name="activity_login_btn_login">登录</string>
    <string name="activity_login_login_dialog_msg">正在登录</string>
    <string name="activity_login_tv_forgot">找回密码？</string>
    <string name="activity_fogot_1_ttb_title">重置密码</string>
    <string name="activity_fogot_1_edt_phone">输入注册手机号</string>
    <string name="activity_fogot_2_ttb_title">重置密码</string>
    <string name="activity_fogot_2_edt_check">输入验证码</string>
    <string name="activity_fogot_2_tv_tip_1">验证码已经发送到手机</string>
    <string name="activity_fogot_2_tv_tip_1_1">%s</string>
    <string name="activity_fogot_2_tv_tip_2">若没有收到，</string>
    <string name="activity_fogot_2_tv_tip_3">%02d秒后重发</string>
    <string name="activity_fogot_2_tv_resend">重新发送</string>
    <string name="activity_fogot_3_ttb_title">重置密码</string>
    <string name="activity_fogot_3_edt_password">输入新密码</string>
    <string name="activity_fogot_3_tv_tip">密码最少6位，最多15位，区分大小写</string>
    <string name="activity_register_1_ttb_title">输入手机号1/3</string>
    <string name="activity_register_1_edt_phone">输入注册手机号</string>
    <string name="activity_register_1_edt_password">输入密码</string>
    <string name="activity_register_1_tv_tip_1">手机号仅注册及亲友紧急联系时使用，不会透露给任何人</string>
    <string name="activity_register_1_tv_tip_2">密码最少6位，最多15位，区分大小写</string>
    <string name="activity_register_2_ttb_title">输入验证码2/3</string>
    <string name="activity_register_2_edt_check">输入验证码</string>
    <string name="activity_register_2_tv_tip_1">验证码已经发送到手机</string>
    <string name="activity_register_2_tv_tip_1_1">%s</string>
    <string name="activity_register_2_tv_tip_2">若没有收到，</string>
    <string name="activity_register_2_tv_tip_3">%02d秒后重发</string>
    <string name="activity_register_2_tv_resend">重新发送</string>
    <string name="activity_register_3_ttb_title">输入资料3/3</string>
    <string name="activity_register_3_tv_tip_1">设置头像</string>
    <string name="activity_register_3_tv_tip_2">最好以本人照片作为头像，方便家人认出你</string>
    <string name="activity_register_3_edt_nickname">输入昵称</string>
    <string name="activity_register_3_choice">请选择性别</string>
    <string name="activity_register_3_choiceman">男</string>
    <string name="activity_register_3_choicewoman">女</string>
    <string name="activity_register_3_image_tv_title">设置头像</string>
    <string name="activity_register_3_image_btn_snapshot">拍照</string>
    <string name="activity_register_3_image_btn_album">手机相册</string>
    <string name="activity_register_3_image_btn_cancel">取消</string>
    <string name="activity_register_3_tv_tip_3">正在创建资料 </string>
    <string name="toast_phone_format_error">请输入正确手机号码</string>
    <string name="toast_phone_ismyselef">不能添加自己为家人</string>
    <string name="toast_phone_length_error">请输入11位手机号码</string>
    <string name="toast_phone_length_out">手机号码不能超过11位</string>
    <string name="toast_phone_notnew_error">你输入的不是新手机号</string>
    <string name="toast_phone_registered_error">该手机号码已被注册</string>
    <string name="toast_phone_unregister_error">该手机号尚未注册</string>
    <string name="toast_check_code_error">验证码错误</string>
    <string name="toast_password_min_error">密码不能少于6位</string>
    <string name="toast_password_max_error">密码不能超过15位</string>
    <string name="toast_nickname_max_error">昵称不能超过10位</string>
    <string name="toast_takemessage_max_error">不能超过16位</string>
    <string name="toast_remark_max_error">备注不能超过10位</string>
    <string name="toast_password_format_error">密码格式错误</string>
    <string name="toast_phone_modify_succeed">手机号修改成功</string>
    <string name="toast_nickname_modify_succeed">昵称修改成功</string>
    <string name="toast_sex_modify_succeed">性别修改成功</string>
    <string name="toast_nickname_format_error">昵称中含有特殊符号，请修改</string>
    <string name="toast_remarkname_modify_succeed">备注名修改成功</string>
    <string name="toast_password_modify_succeed">密码修改成功</string>
    <string name="toast_avatar_modify_succeed">头像修改成功</string>
    <string name="toast_avatar_modify_failed">头像修改失败</string>
    <string name="toast_clue_snapshot_max_error">一次性不能超过8张照片</string>
    <string name="toast_feedback_max_error">不能超过200字</string>
    <string name="toast_update_version_succeed">你使用的已经是最新版了</string>
    <string name="toast_get_contacts_failed">获取联系人失败</string>
    <string name="toast_usernot_register">用户还未注册</string>
    <string name="toast_send_add_friend_failed">添加失败，请稍后再试</string>
    <string name="toast_send_add_friend_success">添加请求已发送，请等待对方通过</string>
    <string name="toast_agree_friend_success">已通过家人请求</string>
    <string name="toast_refuse_friend_success">已拒绝家人请求</string>
    <string name="toast_del_friend_success">已删除家人成功</string>
    <string name="toast_send_voice_sos_failled">发送语音求救失败</string>
    <string name="toast_avatar_upload_failed">图片上传失败，失败原因：</string>
    <string name="toast_clue_image_upload_failed">图片上传失败</string>
    <string name="toast_clue_edit_length_error">不能超过200字</string>
    <string name="toast_sos_voice_upload_failled">语音上传失败</string>
    <string name="toast_sos_voice_canceled">语音求救已取消</string>
    <string name="toast_sos_voice_fail">时间太短，语音录制失败</string>
    <string name="toast_exit_app">再按一次将退出软件</string>
    <string name="toast_no_more_data">没有更多了哦</string>
    <string name="toast_sms_uploading">正在上传...</string>
    <string name="toast_sms_upload_failed">上传语音失败</string>
    <string name="toast_map_zoomin_min">地图已缩到最小</string>
    <string name="toast_map_zoomout_max">地图已放到最大</string>
    <string name="toast_noresult">抱歉，未找到结果，请重新设置</string>
    <string name="toast_userhidelocation">无法获取对方位置</string>
    <string name="toast_user_escorting">%s正在护航，请选择其他人为你护航</string>
    <string name="toast_user_escorted">%s正在被护航中，请选择其他人为你护航</string>
    <string name="toast_user_hidelocation">您已经开启隐身模式</string>
    <string name="toast_user_nothidelocation">您已经关闭隐身模式</string>
    <string name="activity_addfamily_ttb_title">添加家人</string>
    <string name="activity_addfamily_tv_tip_1">从中挑选家人并添加</string>
    <string name="activity_addfamily_edit_tip">联系人姓名/手机号</string>
    <string name="activity_addfamily_clear_text">取消</string>
    <string name="activity_addfamily_nocontact_text1">请输入正确的手机号码</string>
    <string name="activity_addfamily_nocontact_text2">你的通讯录没有此号码，确定向此号码发送邀请？</string>
    <string name="activity_addfamily_tv_add">对方已注册，添加为家人</string>
    <string name="activity_addfamily_btn_add">添加</string>
    <string name="activity_addfamily_itemtv_added">已发送</string>
    <string name="activity_addfamily_tv_invite">对方尚未注册，发送邀请</string>
    <string name="activity_addfamily_btn_invite">邀请</string>
    <string name="activity_addfamily_tv_invited">已发送</string>
    <string name="activity_addfamily_tv_added">已添加为家人</string>
    <string name="activity_addfamily_dlg_title">请稍等</string>
    <string name="activity_addfamily_dlg_message">正在读取通讯录</string>
    <string name="activity_searchadd_ttb_title">查找家人</string>
    <string name="activity_searchadd_edt_phone">输入手机号</string>
    <string name="btn_searchadd_search_text">搜索</string>
    <string name="sms_invite">hi，我正在使用暖途。这款软件可以保护自己保护家人，实时分享位置，互相保驾护航，打开此链接就可以跟我互相看到位置了，%s </string>
    <string name="activity_phone_1_ttb_title">手机号</string>
    <string name="activity_phone_1_tv_tip_1">当前手机号为%1$s，如果此手机号不再使用了，请及时更改手机号。更改成功后，下次登录可以使用新手机号登录。</string>
    <string name="activity_phone_1_edt_new">输入新手机号</string>
    <string name="activity_phone_1_edt_password">输入当前密码</string>
    <string name="activity_phone_2_ttb_title">输入验证码</string>
    <string name="activity_phone_2_edt_check">输入验证码</string>
    <string name="activity_phone_2_tv_tip_1">验证码已经发送到手机%1$s，若没有收到，</string>
    <string name="activity_phone_2_tv_tip_2">请在%1$s秒后点击</string>
    <string name="activity_phone_2_tv_resend">重新发送</string>
    <string name="activity_password_ttb_title">修改密码</string>
    <string name="activity_password_edt_old">请输入旧密码</string>
    <string name="activity_password_tv_old">旧密码</string>
    <string name="activity_password_edt_new">请输入新密码</string>
    <string name="activity_password_tv_new">新密码</string>
    <string name="activity_password_tv_tip">密码最少6位，最多15位，区分大小写</string>
    <string name="activity_nickname_ttb_title">修改昵称</string>
    <string name="activity_sex_ttb_title">性   别</string>
    <string name="activity_sex_man">男性</string>
    <string name="activity_sex_woman">女性</string>
    <string name="activity_feedback_ttb_title">联系反馈</string>
    <string name="activity_account_ttb_title">个人中心</string>
    <string name="activity_account_tv_image">头像</string>
    <string name="activity_account_tv_id">帐号</string>
    <string name="activity_account_tv_phone">手机号</string>
    <string name="activity_account_tv_nickname">昵称</string>
    <string name="activity_account_tv_sex">性别</string>
    <string name="activity_account_tv_password">修改密码</string>
    <string name="activity_account_tv_image_title">设置头像</string>
    <string name="activity_account_btn_image_snapshot">拍照</string>
    <string name="activity_account_btn_image_album">手机相册</string>
    <string name="activity_account_btn_image_cancel">取消</string>
    <string name="activity_nickname_edithint_text">昵称不能超过十位</string>
    <string name="fragment_setting_ttb_title">设置</string>
    <string name="fragment_setting_tv_account">我的帐号</string>
    <string name="fragment_setting_tv_hide_title">隐藏位置</string>
    <string name="fragment_setting_tv_hide_content">隐藏地理位置后，家人将不能查看您的位置</string>
    <string name="fragment_setting_tv_send">SOS求救语音发送对象</string>
    <string name="fragment_setting_tv_both">同时发送给附近警察和家人</string>
    <string name="fragment_setting_tv_police">仅发送给附近警察</string>
    <string name="fragment_setting_tv_guide">功能介绍</string>
    <string name="fragment_setting_tv_update">检查新版本</string>
    <string name="fragment_setting_btn_exit">退出圈子</string>
    <string name="fragment_setting_dlg_title">提示</string>
    <string name="fragment_setting_dlg_tip_1">求救时附近可能没有警察，是否继续设置为“仅发送给附近警察”？</string>
    <string name="fragment_setting_dlg_check">正在获取最新版本信息！</string>
    <string name="fragment_setting_dlg_newest">你使用的已经是最新版了</string>
    <string name="fragment_setting_dlg_btn_update">立即更新</string>
    <string name="dialog_title_tip">提示</string>
    <string name="dialog_title_sos">紧急求救！</string>
</resources>